@@ -12,19 +12,19 @@
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="images/img1.jpg" style="width:100%">
+  <img src="images/img1.jpg" class="image" style="width:100%">
   <div class="text">Someone save him</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="images/img2.jpg" style="width:100%">
+  <img src="images/img2.jpg" class="image" style="width:100%">
   <div class="text">A KNIFE!!</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="images/img3.jpg" style="width:100%">
+  <img src="images/img3.jpg" class="image" style="width:100%">
   <div class="text">Hi to you too</div>
 </div>
 
